--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <body>
     <div class="topnav">
     </div>
-<footer><a class="btn" href="index.html">REFRESH</a></footer>
+<footer><a class="btn" href="index.html" target="_blank" >REFRESH</a></footer>
   </body>
 </html>
