--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <body>
     <div class="topnav">
     </div>
-<footer><a class="btn" href="index.html" target="_blank" >REFRESH</a></footer>
+<footer>
+<a class="btn" href="https://www.w3schools.com" target="_blank">Visit W3Schools</a>
+<a class="btn" href="index.html" target="_blank" >REFRESH</a></footer>
   </body>
 </html>
