--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div class="topnav">
     </div>
 <footer>
-<a class="btn" href="index.html" target="_blank" >REFRESH</a></footer>
+<a class="btn" href="/" target="_blank" >REFRESH</a></footer>
   </body>
 </html>
